# mad_bench

./: Cargo.toml  README.md
benches/: bit_array.rs
src/: bit_array.rs  lib.rs
